--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
+    "emailjs": "^3.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-owl-carousel": "^2.3.3",
